--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Привет! Это мой первый проект в Jenkins.</h1>
     <p>Этот файл я закинул самостоятельно на сервер под управлением nginx автоматически из Git-репозитория!</p>
     <p>Это мы проверяем 1 коммит ;)</p>
+    <p>А это уже 2 коммит. Вот такие дела</p>
     <p><strong>Студент группы БИСТ-22-ИТ-1 Гасанов Д.К.</strong></p>
 </body>
 </html>
